test/compile_errors/stage1/obj/implicit_semicolon-if_statement.zig
export fn entry() void {
    if(true) {}
    var good = {};
    if(true) ({})
    var bad = {};
}

// implicit semicolon - if statement
//
// tmp.zig:4:18: error: expected ';' or 'else' after statement
